@@ -63,7 +63,8 @@ lazy val commonSettings =
 lazy val ratSettings = Seq(
   ratLicenses := Seq(
     ("MIT  ", Rat.MIT_LICENSE_NAME, Rat.MIT_LICENSE_TEXT_MICROSOFT),
-    ("CC0  ", Rat.CREATIVE_COMMONS_LICENSE_NAME, Rat.CREATIVE_COMMONS_LICENSE_TEXT)
+    ("CC0  ", Rat.CREATIVE_COMMONS_LICENSE_NAME, Rat.CREATIVE_COMMONS_LICENSE_TEXT),
+    ("MIT  ", Rat.MIT_LICENSE_NAME, Rat.MIT_LICENSE_TEXT_DELTAXML)
   ),
   ratLicenseFamilies := Seq(
     Rat.MIT_LICENSE_NAME,
@@ -77,11 +78,11 @@ lazy val `daffodil-debugger` = project
   .in(file("."))
   .settings(commonSettings, ratSettings)
   .settings(publish / skip := true)
-  .dependsOn(core)
-  .aggregate(core)
+  .dependsOn(debugger)
+  .aggregate(debugger)
 
-lazy val core = project
-  .in(file("server/core"))
+lazy val debugger = project
+  .in(file("debugger"))
   .enablePlugins(BuildInfoPlugin, JavaAppPackaging, UniversalPlugin, ClasspathJarPlugin, SbtXjcPlugin)
   .settings(commonSettings)
   .settings(xjcSettings)
@@ -106,6 +107,24 @@ lazy val core = project
     packageName := s"${name.value}-$daffodilVer"
   )
 
+lazy val javaMajorVersion: Int =
+  System.getProperty("java.version").stripPrefix("1.").takeWhile(_.isDigit).toInt
+lazy val isAtLeastJava17: Boolean = javaMajorVersion >= 17
+/* Workaround: certain reflection (used by JAXB) isn't allowed by default in JDK 17:
+ * https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-7BB28E4D-99B3-4078-BDC4-FC24180CE82B
+ *
+ * While we can handle this JVM quirk at build time, at runtime we won't know
+ * a user's JVM version. We'll provide documentation and an extension setting
+ * to add these flags to the extension-launched debugger backend.
+ */
+lazy val extraXjcJvmOpts: Seq[String] =
+  if (isAtLeastJava17)
+    Seq(
+      "--add-opens",
+      "java.base/java.lang=ALL-UNNAMED"
+    )
+  else Seq()
+
 lazy val xjcSettings =
   Seq(
     libraryDependencies ++= Seq(
@@ -117,7 +136,8 @@ lazy val xjcSettings =
     xjcCommandLine += "-nv",
     xjcCommandLine += "-p",
     xjcCommandLine += "org.apache.daffodil.tdml",
-    xjcBindings += "server/core/src/main/resources/bindings.xjb",
+    xjcBindings += "debugger/src/main/resources/bindings.xjb",
+    xjcJvmOpts ++= extraXjcJvmOpts,
     xjcLibs := Seq(
       "org.glassfish.jaxb" % "jaxb-xjc" % "2.2.11",
       "com.sun.xml.bind" % "jaxb-impl" % "2.2.11",
